--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
 						<li class="list-item"><a href="#">Lorem Ipsum</a></li>
 					</ul>
 					<figure class="card">
-						<img src="assets/img/card.png" alt="card">
+						<img src="assets/img/WhatsApp Image 2022-06-13 at 10.04.37 PM-min.jpeg" alt="card">
 						<figcaption>Lorem Ipsum</figcaption>
 					</figure>
 				</div>
