--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+		<link rel="icon" href="assets/img/icons/logo-small-ImResizer (1).jpg" type="image/x-icon"/>
 		<link rel="stylesheet" href="assets/scss/slick.min.css"/>
 
 		 <link rel="stylesheet" href="assets/scss/slick-theme.min.css"/>
